--- a/app/views/items/index.html.erb
+++ b/app/views/items/index.html.erb
@@ -1,1 +1,13 @@
-<h1>トップページ</h1>
+<main class="main">
+  <div class="inner">
+    <% if user_signed_in? %>
+       <div class="greeting">
+        こんにちは、
+        <%=  current_user.name %>
+      </div>
+      <% end %>
+    <div class="card__wrapper">
+      <%= render partial: 'item', collection: @items %>
+    </div>
+  </div>
+</main>
