--- a/app/views/items/_form.html.erb
+++ b/app/views/items/_form.html.erb
@@ -6,7 +6,7 @@
 
   <div class="field">
     <%= f.label :text, "記事の中身" %><br />
-    <%= f.text_area :text, class: :form__text %>
+    <%= f.text_area :text, class: :form__text, rows: "10" %>
   </div>
 
   <div class="field">
@@ -15,6 +15,6 @@
   </div>
 
   <div class="actions">
-    <%= f.submit "保存する", class: :form__btn  %>
+    <%= f.submit "投稿", class: :form__btn  %>
   </div>
 <% end %>
